Revert "add report"
This reverts commit 740b6af308ea8af4bfae80827373238fe3ad7bc2.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,6 @@
         "iosfwd": "cpp",
         "limits": "cpp",
         "algorithm": "cpp",
-        "fstream": "cpp",
-        "chrono": "cpp"
+        "fstream": "cpp"
     }
 }
